tests/snapshots/file@base@bool@not.lox.snap
---
source: tests/common/mod.rs
description: "print !true;    // expect: false\nprint !false;   // expect: true\nprint !!true;   // expect: true\n"
input_file: crafting_interpreters_test_files/bool/not.lox
---
OUT: 
false
true
true

===
ERR:
