tests/snapshots/file@base@class@local_inherit_other.lox.snap
---
source: tests/common/mod.rs
description: "class A {}\n\nfun f() {\n  class B < A {}\n  return B;\n}\n\nprint f(); // expect: B\n"
input_file: crafting_interpreters_test_files/class/local_inherit_other.lox
---
OUT: 
<class B>

===
ERR:
