tests/snapshots/file@base@class@reference_self.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  returnSelf() {\n    return Foo;\n  }\n}\n\nprint Foo().returnSelf(); // expect: Foo\n"
input_file: crafting_interpreters_test_files/class/reference_self.lox
---
OUT: 
<class Foo>

===
ERR:
