tests/snapshots/file@base@comments@only_line_comment.lox.snap
---
source: tests/common/mod.rs
description: // comment
input_file: crafting_interpreters_test_files/comments/only_line_comment.lox
---
OUT: 

===
ERR:
