tests/snapshots/file@base@comments@only_line_comment_and_line.lox.snap
---
source: tests/common/mod.rs
description: "// comment\n"
input_file: crafting_interpreters_test_files/comments/only_line_comment_and_line.lox
---
OUT: 

===
ERR:
