tests/snapshots/file@base@empty_file.lox.snap
---
source: tests/common/mod.rs
description: ""
input_file: crafting_interpreters_test_files/empty_file.lox
---
OUT: 

===
ERR:
