tests/snapshots/file@base@field@many.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {}\n\nvar foo = Foo();\nfun setFields() {\n  foo.bilberry = \"bilberry\";\n  foo.lime = \"lime\";\n  foo.elderberry = \"elderberry\";\n  foo.raspberry = \"raspberry\";\n  foo.gooseberry = \"gooseberry\";\n  foo.longan = \"longan\";\n  foo.mandarine = \"mandarine\";\n  foo.kiwifruit = \"kiwifruit\";\n  foo.orange = \"orange\";\n  foo.pomegranate = \"pomegranate\";\n  foo.tomato = \"tomato\";\n  foo.banana = \"banana\";\n  foo.juniper = \"juniper\";\n  foo.damson = \"damson\";\n  foo.blackcurrant = \"blackcurrant\";\n  foo.peach = \"peach\";\n  foo.grape = \"grape\";\n  foo.mango = \"mango\";\n  foo.redcurrant = \"redcurrant\";\n  foo.watermelon = \"watermelon\";\n  foo.plumcot = \"plumcot\";\n  foo.papaya = \"papaya\";\n  foo.cloudberry = \"cloudberry\";\n  foo.rambutan = \"rambutan\";\n  foo.salak = \"salak\";\n  foo.physalis = \"physalis\";\n  foo.huckleberry = \"huckleberry\";\n  foo.coconut = \"coconut\";\n  foo.date = \"date\";\n  foo.tamarind = \"tamarind\";\n  foo.lychee = \"lychee\";\n  foo.raisin = \"raisin\";\n  foo.apple = \"apple\";\n  foo.avocado = \"avocado\";\n  foo.nectarine = \"nectarine\";\n  foo.pomelo = \"pomelo\";\n  foo.melon = \"melon\";\n  foo.currant = \"currant\";\n  foo.plum = \"plum\";\n  foo.persimmon = \"persimmon\";\n  foo.olive = \"olive\";\n  foo.cranberry = \"cranberry\";\n  foo.boysenberry = \"boysenberry\";\n  foo.blackberry = \"blackberry\";\n  foo.passionfruit = \"passionfruit\";\n  foo.mulberry = \"mulberry\";\n  foo.marionberry = \"marionberry\";\n  foo.plantain = \"plantain\";\n  foo.lemon = \"lemon\";\n  foo.yuzu = \"yuzu\";\n  foo.loquat = \"loquat\";\n  foo.kumquat = \"kumquat\";\n  foo.salmonberry = \"salmonberry\";\n  foo.tangerine = \"tangerine\";\n  foo.durian = \"durian\";\n  foo.pear = \"pear\";\n  foo.cantaloupe = \"cantaloupe\";\n  foo.quince = \"quince\";\n  foo.guava = \"guava\";\n  foo.strawberry = \"strawberry\";\n  foo.nance = \"nance\";\n  foo.apricot = \"apricot\";\n  foo.jambul = \"jambul\";\n  foo.grapefruit = \"grapefruit\";\n  foo.clementine = \"clementine\";\n  foo.jujube = \"jujube\";\n  foo.cherry = \"cherry\";\n  foo.feijoa = \"feijoa\";\n  foo.jackfruit = \"jackfruit\";\n  foo.fig = \"fig\";\n  foo.cherimoya = \"cherimoya\";\n  foo.pineapple = \"pineapple\";\n  foo.blueberry = \"blueberry\";\n  foo.jabuticaba = \"jabuticaba\";\n  foo.miracle = \"miracle\";\n  foo.dragonfruit = \"dragonfruit\";\n  foo.satsuma = \"satsuma\";\n  foo.tamarillo = \"tamarillo\";\n  foo.honeydew = \"honeydew\";\n}\n\nsetFields();\n\nfun printFields() {\n  print foo.apple; // expect: apple\n  print foo.apricot; // expect: apricot\n  print foo.avocado; // expect: avocado\n  print foo.banana; // expect: banana\n  print foo.bilberry; // expect: bilberry\n  print foo.blackberry; // expect: blackberry\n  print foo.blackcurrant; // expect: blackcurrant\n  print foo.blueberry; // expect: blueberry\n  print foo.boysenberry; // expect: boysenberry\n  print foo.cantaloupe; // expect: cantaloupe\n  print foo.cherimoya; // expect: cherimoya\n  print foo.cherry; // expect: cherry\n  print foo.clementine; // expect: clementine\n  print foo.cloudberry; // expect: cloudberry\n  print foo.coconut; // expect: coconut\n  print foo.cranberry; // expect: cranberry\n  print foo.currant; // expect: currant\n  print foo.damson; // expect: damson\n  print foo.date; // expect: date\n  print foo.dragonfruit; // expect: dragonfruit\n  print foo.durian; // expect: durian\n  print foo.elderberry; // expect: elderberry\n  print foo.feijoa; // expect: feijoa\n  print foo.fig; // expect: fig\n  print foo.gooseberry; // expect: gooseberry\n  print foo.grape; // expect: grape\n  print foo.grapefruit; // expect: grapefruit\n  print foo.guava; // expect: guava\n  print foo.honeydew; // expect: honeydew\n  print foo.huckleberry; // expect: huckleberry\n  print foo.jabuticaba; // expect: jabuticaba\n  print foo.jackfruit; // expect: jackfruit\n  print foo.jambul; // expect: jambul\n  print foo.jujube; // expect: jujube\n  print foo.juniper; // expect: juniper\n  print foo.kiwifruit; // expect: kiwifruit\n  print foo.kumquat; // expect: kumquat\n  print foo.lemon; // expect: lemon\n  print foo.lime; // expect: lime\n  print foo.longan; // expect: longan\n  print foo.loquat; // expect: loquat\n  print foo.lychee; // expect: lychee\n  print foo.mandarine; // expect: mandarine\n  print foo.mango; // expect: mango\n  print foo.marionberry; // expect: marionberry\n  print foo.melon; // expect: melon\n  print foo.miracle; // expect: miracle\n  print foo.mulberry; // expect: mulberry\n  print foo.nance; // expect: nance\n  print foo.nectarine; // expect: nectarine\n  print foo.olive; // expect: olive\n  print foo.orange; // expect: orange\n  print foo.papaya; // expect: papaya\n  print foo.passionfruit; // expect: passionfruit\n  print foo.peach; // expect: peach\n  print foo.pear; // expect: pear\n  print foo.persimmon; // expect: persimmon\n  print foo.physalis; // expect: physalis\n  print foo.pineapple; // expect: pineapple\n  print foo.plantain; // expect: plantain\n  print foo.plum; // expect: plum\n  print foo.plumcot; // expect: plumcot\n  print foo.pomegranate; // expect: pomegranate\n  print foo.pomelo; // expect: pomelo\n  print foo.quince; // expect: quince\n  print foo.raisin; // expect: raisin\n  print foo.rambutan; // expect: rambutan\n  print foo.raspberry; // expect: raspberry\n  print foo.redcurrant; // expect: redcurrant\n  print foo.salak; // expect: salak\n  print foo.salmonberry; // expect: salmonberry\n  print foo.satsuma; // expect: satsuma\n  print foo.strawberry; // expect: strawberry\n  print foo.tamarillo; // expect: tamarillo\n  print foo.tamarind; // expect: tamarind\n  print foo.tangerine; // expect: tangerine\n  print foo.tomato; // expect: tomato\n  print foo.watermelon; // expect: watermelon\n  print foo.yuzu; // expect: yuzu\n}\n\nprintFields();\n"
input_file: crafting_interpreters_test_files/field/many.lox
---
OUT: 
apple
apricot
avocado
banana
bilberry
blackberry
blackcurrant
blueberry
boysenberry
cantaloupe
cherimoya
cherry
clementine
cloudberry
coconut
cranberry
currant
damson
date
dragonfruit
durian
elderberry
feijoa
fig
gooseberry
grape
grapefruit
guava
honeydew
huckleberry
jabuticaba
jackfruit
jambul
jujube
juniper
kiwifruit
kumquat
lemon
lime
longan
loquat
lychee
mandarine
mango
marionberry
melon
miracle
mulberry
nance
nectarine
olive
orange
papaya
passionfruit
peach
pear
persimmon
physalis
pineapple
plantain
plum
plumcot
pomegranate
pomelo
quince
raisin
rambutan
raspberry
redcurrant
salak
salmonberry
satsuma
strawberry
tamarillo
tamarind
tangerine
tomato
watermelon
yuzu

===
ERR:
